# bot

bot/: Procfile  requirements.txt
bot/filebot/: baotri.py  blacklist.json  blocked_usernames.json  bot.py  cc.py  codes.json  config.json  data.json  likeff.json  login.json  money.json  pyproject.toml  spin_data.json  taixiu_history.json  team.py  test.py  test1.py  tiktok_links.txt  used_keys.txt  user_data.db  users.json  users.txt  videos.json
