[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "art>=6.5",
    "beautifulsoup4>=4.13.3",
    "certifi>=2025.1.31",
    "colorama>=0.4.6",
    "deep-translator>=1.11.4",
    "edge-tts>=7.0.0",
    "feedparser>=6.0.11",
    "googletrans>=4.0.2",
    "gtts>=2.5.4",
    "playwright>=1.52.0",
    "pytelegrambotapi>=4.26.0",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "schedule>=1.2.2",
    "selenium>=4.32.0",
    "undetected-chromedriver>=3.5.5",
    "urllib3>=2.3.0",
    "yt-dlp>=2025.2.19",
]
